# minicyclop

./: .gitignore  README.md  pyproject.toml  setup.cfg
notebooks/: backfill.ipynb  cyclop.csv  dev.ipynb
src/minicyclop/: io.py  tcs_logger.py
