[metadata]
name = minicyclop
author = T. E. Pickering
author_email = te.pickering@gmail.com
description = Utilities to manage the MMTO MiniCyclop seeing monitor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMTObservatory/minicyclop
project_urls =
    Bug Tracker = https://github.com/MMTObservatory/minicyclop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    astropy
    pandas
    scipy
    redis

[options.packages.find]
where = src

[options.extras_require]
dev =
    notebook
    ipympl

[options.entry_points]
console_scripts =
    tcs_logger = minicyclop.tcs_logger:main
